--- a/asherah-config/Cargo.toml
+++ b/asherah-config/Cargo.toml
@@ -16,3 +16,6 @@ anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 asherah = { path = "../asherah" }
+
+[lints]
+workspace = true
