Align Node addon binary naming with legacy distribution

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,9 @@
+[package]
+name = "asherah-workspace"
+version = "0.0.0"
+edition = "2021"
+publish = false
+
 [workspace]
 members = [
   "asherah",
