--- a/asherah-node/Cargo.toml
+++ b/asherah-node/Cargo.toml
@@ -23,6 +23,8 @@ anyhow = "1.0"
 asherah = { path = "../asherah", features = ["sqlite"] }
 tokio = { version = "1", features = ["rt-multi-thread"] }
 once_cell = "1"
+parking_lot = "0.12"
+log = "0.4"
 
 [build-dependencies]
 napi-build = "2"
