--- a/asherah-py/Cargo.toml
+++ b/asherah-py/Cargo.toml
@@ -26,6 +26,7 @@ asherah-config = { path = "../asherah-config" }
 serde_json = "1.0"
 anyhow = "1.0"
 once_cell = "1.19"
+parking_lot = "0.12"
 
 [package.metadata.maturin]
 name = "asherah_py"
