--- a/asherah-py/Cargo.toml
+++ b/asherah-py/Cargo.toml
@@ -27,6 +27,7 @@ serde_json = "1.0"
 anyhow = "1.0"
 once_cell = "1.19"
 parking_lot = "0.12"
+log = "0.4"
 
 [package.metadata.maturin]
 name = "asherah_py"
