--- a/asherah/Cargo.toml
+++ b/asherah/Cargo.toml
@@ -29,7 +29,7 @@ subtle = "2.5"
 xsalsa20poly1305 = "0.9"
 signal-hook = "0.3"
 libc = "0.2"
-windows-sys = { version = "0.48", features = ["Win32_System_Memory"] }
+windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_System_Memory"] }
 ring = "0.17"
 
 [[bin]]
