--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,24 @@ jobs:
       - name: Run full language test matrix
         run: ./scripts/test-in-docker.sh
 
+  tests-arm64:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: linux/arm64
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Verify Docker availability
+        run: docker version
+      - name: Run full language test matrix (Arm64)
+        env:
+          DOCKER_PLATFORM: linux/arm64
+        run: ./scripts/test-in-docker.sh
+
   sanitizers:
     runs-on: ubuntu-latest
     needs: tests
@@ -47,12 +65,12 @@ jobs:
         uses: dtolnay/rust-toolchain@nightly
         with:
           components: miri
-      - name: Prepare nightly toolchain target
-        run: rustup +nightly target add x86_64-unknown-linux-gnu
       - name: Run miri on FFI crate
         run: |
           cargo +nightly miri setup
           cargo +nightly miri test -p asherah-ffi
+      - name: Prepare nightly toolchain target
+        run: rustup +nightly target add x86_64-unknown-linux-gnu
       - name: Run address sanitizer on FFI crate
         env:
           RUSTFLAGS: -Zsanitizer=address
@@ -62,3 +80,35 @@ jobs:
       - name: Run valgrind on FFI tests
         run: |
           valgrind --error-exitcode=1 cargo test -p asherah-ffi --lib
+
+  build-cross:
+    runs-on: ubuntu-latest
+    needs:
+      - tests
+      - tests-arm64
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up QEMU for cross architectures
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: linux/arm64
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build bindings (amd64)
+        env:
+          DOCKER_PLATFORM: linux/amd64
+        run: ./scripts/build-bindings-docker.sh
+      - name: Build bindings (arm64)
+        env:
+          DOCKER_PLATFORM: linux/arm64
+        run: ./scripts/build-bindings-docker.sh
+      - name: Upload amd64 binding artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: bindings-linux-x86_64
+          path: artifacts/x86_64/**
+      - name: Upload arm64 binding artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: bindings-linux-aarch64
+          path: artifacts/aarch64/**
