--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,9 @@ jobs:
 
   tests-arm64:
     runs-on: ubuntu-latest
-    needs: lint
+    needs:
+      - lint
+      - build-cross
     steps:
       - uses: actions/checkout@v4
       - name: Restore workspace caches
@@ -72,6 +74,11 @@ jobs:
           key: tests-${{ runner.os }}-arm64-${{ hashFiles('**/Cargo.lock', 'asherah-node/package-lock.json', 'asherah-py/Cargo.toml', 'asherah-py/pyproject.toml', 'asherah-java/java/pom.xml', 'asherah-dotnet/**/*.csproj') }}
           restore-keys: |
             tests-${{ runner.os }}-arm64-
+      - name: Download arm64 binding artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: bindings-linux-aarch64
+          path: artifacts/aarch64
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
@@ -83,6 +90,8 @@ jobs:
       - name: Run full language test matrix (Arm64)
         env:
           DOCKER_PLATFORM: linux/arm64
+          BINDING_TESTS_ONLY: "1"
+          BINDING_ARTIFACTS_DIR: /workspace/artifacts/aarch64
         run: ./scripts/test-in-docker.sh
 
   sanitizers:
@@ -125,9 +134,7 @@ jobs:
 
   build-cross:
     runs-on: ubuntu-latest
-    needs:
-      - tests
-      - tests-arm64
+    needs: lint
     steps:
       - uses: actions/checkout@v4
       - name: Restore workspace caches
