--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
         with:
           path: |
             .cache/cargo
+            .cache/rustup
             .cache/pip
             .cache/npm
             .cache/maven
@@ -67,6 +68,7 @@ jobs:
         with:
           path: |
             .cache/cargo
+            .cache/rustup
             .cache/pip
             .cache/npm
             .cache/maven
@@ -91,7 +93,7 @@ jobs:
         env:
           DOCKER_PLATFORM: linux/arm64
           BINDING_TESTS_ONLY: "1"
-          BINDING_ARTIFACTS_DIR: /workspace/artifacts/aarch64
+          BINDING_ARTIFACTS_DIR: ${{ github.workspace }}/artifacts/aarch64
         run: ./scripts/test-in-docker.sh
 
   sanitizers:
@@ -135,6 +137,9 @@ jobs:
   build-cross:
     runs-on: ubuntu-latest
     needs: lint
+    env:
+      CARGO_HOME: ${{ github.workspace }}/.cache/cargo
+      RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
     steps:
       - uses: actions/checkout@v4
       - name: Restore workspace caches
@@ -142,6 +147,7 @@ jobs:
         with:
           path: |
             .cache/cargo
+            .cache/rustup
             .cache/pip
             .cache/npm
             .cache/maven
