--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,11 +56,47 @@ jobs:
       - name: Run full language test matrix
         run: ./scripts/test-in-docker.sh
 
+  build-x86_64:
+    runs-on: ubuntu-latest
+    needs: lint
+    env:
+      CARGO_HOME: ${{ github.workspace }}/.cache/cargo
+      RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
+    steps:
+      - uses: actions/checkout@v4
+      - name: Restore workspace caches
+        uses: actions/cache@v4
+        with:
+          path: |
+            .cache/cargo
+            .cache/rustup
+            .cache/pip
+            .cache/npm
+            .cache/maven
+            .cache/dotnet
+          key: build-${{ runner.os }}-x86_64-${{ hashFiles('**/Cargo.lock', 'asherah-node/package-lock.json', 'asherah-py/Cargo.toml', 'asherah-py/pyproject.toml', 'asherah-java/java/pom.xml', 'asherah-dotnet/**/*.csproj') }}
+          restore-keys: |
+            build-${{ runner.os }}-x86_64-
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
+      - name: Build bindings (x86_64)
+        env:
+          TARGET_ARCH: x86_64
+        run: ./scripts/build-bindings.sh
+      - name: Upload amd64 binding artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: bindings-linux-x86_64
+          path: artifacts/x86_64/**
+
   tests-arm64:
     runs-on: ubuntu-latest
     needs:
-      - lint
-      - build-cross
+      - build-arm64
     steps:
       - uses: actions/checkout@v4
       - name: Restore workspace caches
@@ -135,7 +171,7 @@ jobs:
         run: |
           valgrind --error-exitcode=1 cargo test -p asherah-ffi --lib
 
-  build-cross:
+  build-arm64:
     runs-on: ubuntu-latest
     needs: lint
     env:
@@ -153,9 +189,9 @@ jobs:
             .cache/npm
             .cache/maven
             .cache/dotnet
-          key: build-${{ runner.os }}-${{ hashFiles('**/Cargo.lock', 'asherah-node/package-lock.json', 'asherah-py/Cargo.toml', 'asherah-py/pyproject.toml', 'asherah-java/java/pom.xml', 'asherah-dotnet/**/*.csproj') }}
+          key: build-${{ runner.os }}-arm64-${{ hashFiles('**/Cargo.lock', 'asherah-node/package-lock.json', 'asherah-py/Cargo.toml', 'asherah-py/pyproject.toml', 'asherah-java/java/pom.xml', 'asherah-dotnet/**/*.csproj') }}
           restore-keys: |
-            build-${{ runner.os }}-
+            build-${{ runner.os }}-arm64-
       - name: Install cross toolchains
         run: |
           sudo apt-get update
@@ -163,10 +199,12 @@ jobs:
       - name: Prepare Rust targets
         run: |
           rustup target add aarch64-unknown-linux-gnu
-      - name: Build bindings (amd64)
-        env:
-          TARGET_ARCH: x86_64
-        run: ./scripts/build-bindings.sh
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
       - name: Build bindings (arm64)
         env:
           TARGET_ARCH: aarch64
@@ -177,11 +215,6 @@ jobs:
           AR_aarch64_unknown_linux_gnu: aarch64-linux-gnu-ar
           PKG_CONFIG_ALLOW_CROSS: 1
         run: ./scripts/build-bindings.sh
-      - name: Upload amd64 binding artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: bindings-linux-x86_64
-          path: artifacts/x86_64/**
       - name: Upload arm64 binding artifacts
         uses: actions/upload-artifact@v4
         with:
