--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -714,7 +714,9 @@ jobs:
   tests-arm64:
     runs-on: ubuntu-latest
     needs:
-      - assemble-arm64
+      - package-arm64-ffi
+      - package-arm64-node
+      - package-arm64-python
     steps:
       - uses: actions/checkout@v4
       - name: Restore workspace caches
@@ -731,11 +733,29 @@ jobs:
           key: tests-${{ runner.os }}-arm64-${{ hashFiles('**/Cargo.lock', 'asherah-node/package-lock.json', 'asherah-py/Cargo.toml', 'asherah-py/pyproject.toml', 'asherah-java/java/pom.xml', 'asherah-dotnet/**/*.csproj') }}
           restore-keys: |
             tests-${{ runner.os }}-arm64-
-      - name: Download arm64 binding artifacts
-        uses: actions/download-artifact@v4
+      - name: Prepare partial artifacts
+        run: |
+          rm -rf artifacts/aarch64 partial/aarch64
+          mkdir -p artifacts/aarch64 partial/aarch64
+      - uses: actions/download-artifact@v4
         with:
-          name: bindings-linux-aarch64
-          path: artifacts/aarch64
+          name: bindings-linux-aarch64-part-ffi
+          path: partial/aarch64/ffi
+      - uses: actions/download-artifact@v4
+        with:
+          name: bindings-linux-aarch64-part-node
+          path: partial/aarch64/node
+      - uses: actions/download-artifact@v4
+        with:
+          name: bindings-linux-aarch64-part-python
+          path: partial/aarch64/python
+      - name: Merge partial artifacts
+        run: |
+          shopt -s nullglob
+          for part in partial/aarch64/*/artifacts/aarch64/*; do
+            cp -R "$part" artifacts/aarch64/
+          done
+          shopt -u nullglob
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
