--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,7 +109,11 @@ jobs:
   tests-arm64:
     runs-on: ubuntu-latest
     needs:
-      - assemble-arm64
+      - package-arm64
+    strategy:
+      fail-fast: false
+      matrix:
+        binding: [ffi, python, node, dotnet, java]
     steps:
       - uses: actions/checkout@v4
       - name: Restore workspace caches
@@ -122,13 +126,14 @@ jobs:
             .cache/npm
             .cache/maven
             .cache/dotnet
-          key: tests-${{ runner.os }}-arm64-${{ hashFiles('**/Cargo.lock', 'asherah-node/package-lock.json', 'asherah-py/Cargo.toml', 'asherah-py/pyproject.toml', 'asherah-java/java/pom.xml', 'asherah-dotnet/**/*.csproj') }}
+          key: tests-${{ runner.os }}-arm64-${{ matrix.binding }}-${{ hashFiles('**/Cargo.lock', 'asherah-node/package-lock.json', 'asherah-py/Cargo.toml', 'asherah-py/pyproject.toml', 'asherah-java/java/pom.xml', 'asherah-dotnet/**/*.csproj') }}
           restore-keys: |
+            tests-${{ runner.os }}-arm64-${{ matrix.binding }}-
             tests-${{ runner.os }}-arm64-
-      - name: Download arm64 binding artifacts
+      - name: Download arm64 binding artifact
         uses: actions/download-artifact@v4
         with:
-          name: bindings-linux-aarch64
+          name: bindings-linux-aarch64-part-${{ matrix.binding }}
           path: artifacts/aarch64
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -138,12 +143,13 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Verify Docker availability
         run: docker version
-      - name: Run full language test matrix (Arm64)
+      - name: Run ${{ matrix.binding }} binding tests (Arm64)
         env:
           DOCKER_PLATFORM: linux/arm64
           BINDING_TESTS_ONLY: "1"
           BINDING_ARTIFACTS_DIR: ${{ github.workspace }}/artifacts/aarch64
           BINDING_TESTS_FAST_ONLY: "1"
+          BINDING_TESTS_BINDING: ${{ matrix.binding }}
         run: ./scripts/test-in-docker.sh
 
   sanitizers:
