--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,10 +106,38 @@ jobs:
           name: bindings-linux-x86_64-part-${{ matrix.component }}
           path: artifacts/x86_64
 
+  arm64-test-image:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: linux/arm64
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build arm64 test image
+        run: |
+          docker buildx build \
+            --file docker/tests.Dockerfile \
+            --platform linux/arm64 \
+            --tag asherah-tests:arm64 \
+            --cache-from type=gha,scope=tests-arm64-image \
+            --cache-to type=gha,mode=max,scope=tests-arm64-image \
+            --output type=docker,dest=/tmp/asherah-tests-arm64.tar \
+            .
+      - name: Upload arm64 test image
+        uses: actions/upload-artifact@v4
+        with:
+          name: arm64-tests-image
+          path: /tmp/asherah-tests-arm64.tar
+
   tests-arm64:
     runs-on: ubuntu-latest
     needs:
       - package-arm64
+      - arm64-test-image
     strategy:
       fail-fast: false
       matrix:
@@ -135,14 +163,19 @@ jobs:
         with:
           name: bindings-linux-aarch64-part-${{ matrix.binding }}
           path: artifacts/aarch64
+      - name: Download arm64 test image
+        uses: actions/download-artifact@v4
+        with:
+          name: arm64-tests-image
+          path: artifacts
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
           platforms: linux/arm64
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
       - name: Verify Docker availability
         run: docker version
+      - name: Load arm64 test image
+        run: docker load --input artifacts/asherah-tests-arm64.tar
       - name: Run ${{ matrix.binding }} binding tests (Arm64)
         env:
           DOCKER_PLATFORM: linux/arm64
@@ -150,6 +183,8 @@ jobs:
           BINDING_ARTIFACTS_DIR: ${{ github.workspace }}/artifacts/aarch64
           BINDING_TESTS_FAST_ONLY: "1"
           BINDING_TESTS_BINDING: ${{ matrix.binding }}
+          USE_PREBUILT_TEST_IMAGE: "1"
+          TESTS_IMAGE_TAG: asherah-tests:arm64
         run: ./scripts/test-in-docker.sh
 
   sanitizers:
