--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,9 +57,47 @@ jobs:
       - name: Run full language test matrix
         run: ./scripts/test-in-docker.sh
 
-  package-x86_64:
+  core-x86_64:
     runs-on: ubuntu-latest
     needs: lint
+    env:
+      CARGO_HOME: ${{ github.workspace }}/.cache/cargo
+      RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
+      NPM_CONFIG_CACHE: ${{ github.workspace }}/.cache/npm
+      BUN_INSTALL: ${{ github.workspace }}/.cache/bun
+      PIP_CACHE_DIR: ${{ github.workspace }}/.cache/pip
+    steps:
+      - uses: actions/checkout@v4
+      - name: Restore workspace caches
+        uses: actions/cache@v4
+        with:
+          path: |
+            .cache/cargo
+            .cache/rustup
+            .cache/pip
+            .cache/npm
+            .cache/maven
+            .cache/dotnet
+            .cache/bun
+          key: build-${{ runner.os }}-x86_64-core-${{ hashFiles('**/Cargo.lock', 'asherah-node/package-lock.json', 'asherah-py/Cargo.toml', 'asherah-py/pyproject.toml', 'asherah-java/java/pom.xml', 'asherah-dotnet/**/*.csproj') }}
+          restore-keys: |
+            build-${{ runner.os }}-x86_64-core-
+      - name: Build FFI core (x86_64)
+        env:
+          TARGET_ARCH: x86_64
+          BINDING_COMPONENTS: ffi
+        run: ./scripts/build-bindings.sh
+      - name: Cache x86_64 core artifacts
+        uses: actions/cache/save@v4
+        with:
+          path: |
+            target/x86_64-unknown-linux-gnu
+            target/release
+          key: core-target-${{ runner.os }}-x86_64-${{ github.run_id }}
+
+  package-x86_64:
+    runs-on: ubuntu-latest
+    needs: core-x86_64
     strategy:
       fail-fast: false
       matrix:
@@ -87,6 +125,14 @@ jobs:
           restore-keys: |
             build-${{ runner.os }}-x86_64-${{ matrix.component }}-
             build-${{ runner.os }}-x86_64-
+      - name: Restore x86_64 core artifacts
+        uses: actions/cache/restore@v4
+        with:
+          path: |
+            target/x86_64-unknown-linux-gnu
+            target/release
+          key: core-target-${{ runner.os }}-x86_64-${{ github.run_id }}
+          fail-on-cache-miss: true
       - uses: actions/setup-node@v4
         if: matrix.component == 'node'
         with:
@@ -99,6 +145,7 @@ jobs:
         env:
           TARGET_ARCH: x86_64
           BINDING_COMPONENTS: ${{ matrix.component }}
+          SKIP_CORE_BUILD: "1"
         run: ./scripts/build-bindings.sh
       - name: Upload partial artifact (${{ matrix.component }})
         uses: actions/upload-artifact@v4
@@ -343,9 +390,59 @@ jobs:
           name: bindings-linux-aarch64
           path: artifacts/aarch64/**
 
-  package-arm64:
+  core-arm64:
     runs-on: ubuntu-latest
     needs: lint
+    env:
+      CARGO_HOME: ${{ github.workspace }}/.cache/cargo
+      RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
+      NPM_CONFIG_CACHE: ${{ github.workspace }}/.cache/npm
+      BUN_INSTALL: ${{ github.workspace }}/.cache/bun
+      PIP_CACHE_DIR: ${{ github.workspace }}/.cache/pip
+    steps:
+      - uses: actions/checkout@v4
+      - name: Restore workspace caches
+        uses: actions/cache@v4
+        with:
+          path: |
+            .cache/cargo
+            .cache/rustup
+            .cache/pip
+            .cache/npm
+            .cache/maven
+            .cache/dotnet
+            .cache/bun
+          key: build-${{ runner.os }}-arm64-core-${{ hashFiles('**/Cargo.lock', 'asherah-node/package-lock.json', 'asherah-py/Cargo.toml', 'asherah-py/pyproject.toml', 'asherah-java/java/pom.xml', 'asherah-dotnet/**/*.csproj') }}
+          restore-keys: |
+            build-${{ runner.os }}-arm64-core-
+      - name: Install cross toolchains
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libc6-dev-arm64-cross pkg-config
+      - name: Prepare Rust target
+        run: rustup target add aarch64-unknown-linux-gnu
+      - name: Build FFI core (arm64)
+        env:
+          TARGET_ARCH: aarch64
+          BINDING_COMPONENTS: ffi
+          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
+          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_AR: aarch64-linux-gnu-ar
+          CC_aarch64_unknown_linux_gnu: aarch64-linux-gnu-gcc
+          CXX_aarch64_unknown_linux_gnu: aarch64-linux-gnu-g++
+          AR_aarch64_unknown_linux_gnu: aarch64-linux-gnu-ar
+          PKG_CONFIG_ALLOW_CROSS: 1
+        run: ./scripts/build-bindings.sh
+      - name: Cache arm64 core artifacts
+        uses: actions/cache/save@v4
+        with:
+          path: |
+            target/aarch64-unknown-linux-gnu
+            target/release
+          key: core-target-${{ runner.os }}-arm64-${{ github.run_id }}
+
+  package-arm64:
+    runs-on: ubuntu-latest
+    needs: core-arm64
     strategy:
       fail-fast: false
       matrix:
@@ -373,6 +470,14 @@ jobs:
           restore-keys: |
             build-${{ runner.os }}-arm64-${{ matrix.component }}-
             build-${{ runner.os }}-arm64-
+      - name: Restore arm64 core artifacts
+        uses: actions/cache/restore@v4
+        with:
+          path: |
+            target/aarch64-unknown-linux-gnu
+            target/release
+          key: core-target-${{ runner.os }}-arm64-${{ github.run_id }}
+          fail-on-cache-miss: true
       - name: Install cross toolchains
         run: |
           sudo apt-get update
@@ -397,6 +502,7 @@ jobs:
           CXX_aarch64_unknown_linux_gnu: aarch64-linux-gnu-g++
           AR_aarch64_unknown_linux_gnu: aarch64-linux-gnu-ar
           PKG_CONFIG_ALLOW_CROSS: 1
+          SKIP_CORE_BUILD: "1"
         run: ./scripts/build-bindings.sh
       - name: Upload partial artifact (${{ matrix.component }} arm64)
         uses: actions/upload-artifact@v4
