--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -210,6 +210,11 @@ jobs:
         with:
           name: bindings-linux-aarch64-part-${{ matrix.binding }}
           path: artifacts/aarch64
+      - name: Download arm64 core FFI artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: bindings-linux-aarch64-part-ffi
+          path: artifacts/aarch64
       - name: Download arm64 test image
         uses: actions/download-artifact@v4
         with:
