ci/tests: build node addon in arm64 test container; set LD_LIBRARY_PATH; ignore missing python artifact in assemble; improve node addon error detail

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -303,6 +303,7 @@ jobs:
         with:
           name: bindings-linux-x86_64-part-python
           path: partial/x86_64/python
+        continue-on-error: true
       - uses: actions/download-artifact@v4
         with:
           name: bindings-linux-x86_64-part-dotnet
@@ -362,6 +363,7 @@ jobs:
         with:
           name: bindings-linux-aarch64-part-python
           path: partial/aarch64/python
+        continue-on-error: true
       - uses: actions/download-artifact@v4
         with:
           name: bindings-linux-aarch64-part-dotnet
