--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -150,7 +150,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           command: build
-          args: --release --manifest-path asherah-py/Cargo.toml --target x86_64-unknown-linux-gnu --compatibility manylinux_2_28 --out artifacts/x86_64/python
+          args: --release --manifest-path asherah-py/Cargo.toml --compatibility manylinux_2_28 --out artifacts/x86_64/python
           manylinux: 2_28
           rust-toolchain: stable
       - name: Package ${{ matrix.component }} (x86_64)
@@ -518,7 +518,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           command: build
-          args: --release --manifest-path asherah-py/Cargo.toml --target aarch64-unknown-linux-gnu --compatibility manylinux_2_28 --out artifacts/aarch64/python
+          args: --release --manifest-path asherah-py/Cargo.toml --compatibility manylinux_2_28 --out artifacts/aarch64/python
           manylinux: 2_28
           target: aarch64
           rust-toolchain: stable
