--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,11 +130,19 @@ jobs:
             build-${{ runner.os }}-x86_64-${{ matrix.component }}-
             build-${{ runner.os }}-x86_64-
       - name: Restore x86_64 core artifacts
+        if: matrix.component != 'python'
         uses: actions/cache/restore@v4
         with:
           path: |
             target/x86_64-unknown-linux-gnu
             target/release
+          key: core-target-${{ runner.os }}-x86_64-${{ github.run_id }}
+          fail-on-cache-miss: true
+      - name: Restore x86_64 core artifacts (Python only target-specific)
+        if: matrix.component == 'python'
+        uses: actions/cache/restore@v4
+        with:
+          path: target/x86_64-unknown-linux-gnu
           key: core-target-${{ runner.os }}-x86_64-${{ github.run_id }}
           fail-on-cache-miss: true
       - uses: actions/setup-node@v4
@@ -490,11 +498,19 @@ jobs:
             build-${{ runner.os }}-arm64-${{ matrix.component }}-
             build-${{ runner.os }}-arm64-
       - name: Restore arm64 core artifacts
+        if: matrix.component != 'python'
         uses: actions/cache/restore@v4
         with:
           path: |
             target/aarch64-unknown-linux-gnu
             target/release
+          key: core-target-${{ runner.os }}-arm64-${{ github.run_id }}
+          fail-on-cache-miss: true
+      - name: Restore arm64 core artifacts (Python only target-specific)
+        if: matrix.component == 'python'
+        uses: actions/cache/restore@v4
+        with:
+          path: target/aarch64-unknown-linux-gnu
           key: core-target-${{ runner.os }}-arm64-${{ github.run_id }}
           fail-on-cache-miss: true
       - name: Install cross toolchains
