--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -149,6 +149,10 @@ jobs:
       - name: Package ${{ matrix.component }} (x86_64) - manylinux
         if: matrix.component == 'python'
         uses: PyO3/maturin-action@v1
+        env:
+          CARGO_HOME: ""
+          RUSTUP_HOME: ""
+          CARGO_TARGET_DIR: ""
         with:
           command: build
           args: --release --manifest-path asherah-py/Cargo.toml --compatibility manylinux_2_28 --out artifacts/x86_64/python
@@ -518,6 +522,10 @@ jobs:
       - name: Package ${{ matrix.component }} (arm64) - manylinux
         if: matrix.component == 'python'
         uses: PyO3/maturin-action@v1
+        env:
+          CARGO_HOME: ""
+          RUSTUP_HOME: ""
+          CARGO_TARGET_DIR: ""
         with:
           command: build
           args: --release --manifest-path asherah-py/Cargo.toml --compatibility manylinux_2_28 --out artifacts/aarch64/python
