--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -456,21 +456,22 @@ jobs:
           key: build-${{ runner.os }}-arm64-core-${{ hashFiles('**/Cargo.lock', 'asherah-node/package-lock.json', 'asherah-py/Cargo.toml', 'asherah-py/pyproject.toml', 'asherah-java/java/pom.xml', 'asherah-dotnet/**/*.csproj') }}
           restore-keys: |
             build-${{ runner.os }}-arm64-core-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: linux/arm64
-      - name: Build FFI core (arm64) in manylinux container
+      - name: Build FFI core (arm64) with manylinux_2_28 sysroot
         run: |
           docker run --rm \
             -v "$PWD":/io \
             -w /io \
-            --platform linux/arm64 \
-            quay.io/pypa/manylinux_2_28_aarch64:latest \
+            quay.io/pypa/manylinux_2_28_x86_64:latest \
             bash -c "
               curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal
               source \$HOME/.cargo/env
               rustup target add aarch64-unknown-linux-gnu
+              yum install -y gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu
+              export CC_aarch64_unknown_linux_gnu=aarch64-linux-gnu-gcc
+              export CXX_aarch64_unknown_linux_gnu=aarch64-linux-gnu-g++
+              export AR_aarch64_unknown_linux_gnu=aarch64-linux-gnu-ar
+              export CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc
+              export PKG_CONFIG_ALLOW_CROSS=1
               TARGET_ARCH=aarch64 BINDING_COMPONENTS=ffi ./scripts/build-bindings.sh
             "
       - name: Cache arm64 core artifacts
