--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -466,7 +466,7 @@ jobs:
               curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal
               source \$HOME/.cargo/env
               rustup target add aarch64-unknown-linux-gnu
-              yum install -y gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu
+              yum install -y gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu glibc-devel.aarch64
               export CC_aarch64_unknown_linux_gnu=aarch64-linux-gnu-gcc
               export CXX_aarch64_unknown_linux_gnu=aarch64-linux-gnu-g++
               export AR_aarch64_unknown_linux_gnu=aarch64-linux-gnu-ar
