fix(ci): use ubuntu-latest for arm64 build (runner availability)
Ubuntu-20.04 runners have limited availability. Using ubuntu-latest with
cross-compiler. The newer glibc should work due to symbol compatibility.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -432,7 +432,7 @@ jobs:
           path: artifacts/aarch64/**
 
   core-arm64:
-    runs-on: ubuntu-20.04  # glibc 2.31, same as Debian Bullseye test container
+    runs-on: ubuntu-latest  # Cross-compile with proper sysroot
     needs: lint
     env:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
