--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -432,7 +432,7 @@ jobs:
           path: artifacts/aarch64/**
 
   core-arm64:
-    runs-on: ubuntu-latest  # Cross-compile with proper sysroot
+    runs-on: ubuntu-20.04  # glibc 2.31 matches test container
     needs: lint
     env:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
