--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -434,7 +434,7 @@ jobs:
   core-arm64:
     runs-on: ubuntu-latest
     needs: lint
-    container: debian:bullseye  # glibc 2.31, same as test container
+    container: rust:1.86-bullseye  # glibc 2.31, Rust pre-installed
     env:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
       RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
@@ -460,12 +460,7 @@ jobs:
       - name: Install cross-compile toolchain for arm64
         run: |
           apt-get update
-          apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu curl
-      - name: Install Rust
-        run: |
-          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal
-          . "$HOME/.cargo/env"
-          rustup target add aarch64-unknown-linux-gnu
+          apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
       - name: Build FFI core (arm64) via cross-compilation
         env:
           CC_aarch64_unknown_linux_gnu: aarch64-linux-gnu-gcc
@@ -476,7 +471,7 @@ jobs:
           TARGET_ARCH: aarch64
           BINDING_COMPONENTS: ffi
         run: |
-          . "$HOME/.cargo/env"
+          rustup target add aarch64-unknown-linux-gnu
           ./scripts/build-bindings.sh
       - name: Cache arm64 core artifacts
         uses: actions/cache/save@v4
