--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -473,13 +473,13 @@ jobs:
         run: |
           rustup target add aarch64-unknown-linux-gnu
           ./scripts/build-bindings.sh
-      - name: Cache arm64 core artifacts
-        uses: actions/cache/save@v4
+      - name: Upload arm64 core artifacts
+        uses: actions/upload-artifact@v4
         with:
+          name: arm64-core-artifacts
           path: |
-            ${{ github.workspace }}/target/aarch64-unknown-linux-gnu
-            ${{ github.workspace }}/target/release
-          key: core-target-${{ runner.os }}-arm64-${{ github.run_id }}
+            target/aarch64-unknown-linux-gnu
+            target/release
 
   package-arm64:
     runs-on: ubuntu-latest
@@ -512,15 +512,12 @@ jobs:
           restore-keys: |
             build-${{ runner.os }}-arm64-${{ matrix.component }}-
             build-${{ runner.os }}-arm64-
-      - name: Restore arm64 core artifacts
+      - name: Download arm64 core artifacts
         if: matrix.component != 'python'
-        uses: actions/cache/restore@v4
+        uses: actions/download-artifact@v4
         with:
-          path: |
-            ${{ github.workspace }}/target/aarch64-unknown-linux-gnu
-            ${{ github.workspace }}/target/release
-          key: core-target-${{ runner.os }}-arm64-${{ github.run_id }}
-          fail-on-cache-miss: true
+          name: arm64-core-artifacts
+          path: .
       - name: Install cross toolchains
         if: matrix.component != 'python'
         run: |
@@ -537,15 +534,12 @@ jobs:
         if: matrix.component == 'dotnet'
         with:
           dotnet-version: '8.0.x'
-      - name: Restore arm64 core artifacts for Python
+      - name: Download arm64 core artifacts for Python
         if: matrix.component == 'python'
-        uses: actions/cache/restore@v4
+        uses: actions/download-artifact@v4
         with:
-          path: |
-            ${{ github.workspace }}/target/aarch64-unknown-linux-gnu
-            ${{ github.workspace }}/target/release
-          key: core-target-${{ runner.os }}-arm64-${{ github.run_id }}
-          fail-on-cache-miss: true
+          name: arm64-core-artifacts
+          path: .
       - name: Prepare Python build directory
         if: matrix.component == 'python'
         run: |
