fix(ci): prevent ffi artifact from overwriting binding artifacts in tests
Don't download ffi artifact when testing ffi binding (redundant).
Prevents second download from overwriting node/npm directory.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -247,6 +247,7 @@ jobs:
           name: bindings-linux-aarch64-part-${{ matrix.binding }}
           path: artifacts/aarch64
       - name: Download arm64 core FFI artifact
+        if: matrix.binding != 'ffi'
         uses: actions/download-artifact@v4
         with:
           name: bindings-linux-aarch64-part-ffi
