--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -191,15 +191,38 @@ jobs:
   arm64-test-image:
     runs-on: ubuntu-latest
     needs: lint
+    env:
+      CACHE_MAX_AGE_DAYS: 7
+    outputs:
+      cache-hit: ${{ steps.check-cache.outputs.cache-hit }}
     steps:
       - uses: actions/checkout@v4
+      - name: Calculate cache key
+        id: cache-key
+        run: |
+          DOCKERFILE_HASH=$(sha256sum docker/tests.Dockerfile | cut -d' ' -f1 | head -c 8)
+          # Get week number to force rebuild every N days
+          WEEK_NUM=$(( $(date +%s) / 86400 / ${{ env.CACHE_MAX_AGE_DAYS }} ))
+          CACHE_KEY="arm64-test-image-${DOCKERFILE_HASH}-week-${WEEK_NUM}"
+          echo "cache-key=${CACHE_KEY}" >> $GITHUB_OUTPUT
+          echo "Cache key: ${CACHE_KEY}"
+      - name: Check for cached image
+        id: check-cache
+        uses: actions/cache@v4
+        with:
+          path: /tmp/asherah-tests-arm64.tar
+          key: ${{ steps.cache-key.outputs.cache-key }}
+          lookup-only: true
       - name: Set up QEMU
+        if: steps.check-cache.outputs.cache-hit != 'true'
         uses: docker/setup-qemu-action@v3
         with:
           platforms: linux/arm64
       - name: Set up Docker Buildx
+        if: steps.check-cache.outputs.cache-hit != 'true'
         uses: docker/setup-buildx-action@v3
       - name: Build arm64 test image
+        if: steps.check-cache.outputs.cache-hit != 'true'
         run: |
           docker buildx build \
             --file docker/tests.Dockerfile \
@@ -209,6 +232,18 @@ jobs:
             --cache-to type=gha,mode=max,scope=tests-arm64-image \
             --output type=docker,dest=/tmp/asherah-tests-arm64.tar \
             .
+      - name: Restore cached image
+        if: steps.check-cache.outputs.cache-hit == 'true'
+        uses: actions/cache/restore@v4
+        with:
+          path: /tmp/asherah-tests-arm64.tar
+          key: ${{ steps.cache-key.outputs.cache-key }}
+      - name: Save image to cache
+        if: steps.check-cache.outputs.cache-hit != 'true'
+        uses: actions/cache/save@v4
+        with:
+          path: /tmp/asherah-tests-arm64.tar
+          key: ${{ steps.cache-key.outputs.cache-key }}
       - name: Upload arm64 test image
         uses: actions/upload-artifact@v4
         with:
